force-app/main/default/objects/CampaignMember/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Contact.Account.Account_Manager__r.FirstName + &quot; &quot; +  Contact.Account.Account_Manager__r.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>