force-app/main/default/objects/CampaignMember/fields/Fab_5__c.field-meta.xml
<CustomField>
    <fullName>Fab_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fab 5</label>
    <type>Checkbox</type>
</CustomField>