force-app/main/default/objects/CampaignMember/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Onsite Training</fullName>
            </value>
            <value>
                <fullName>Train-the-Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>