force-app/main/default/objects/CampaignMember/fields/Prosci_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prosci Advocate</label>
    <type>Checkbox</type>
</CustomField>