force-app/main/default/objects/CampaignMember/recordTypes/Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Member</fullName>
    <active>true</active>
    <label>Campaign Member</label>
</RecordType>